@@ -56,11 +56,11 @@ over time.
 
 To display current planetary positions, type:
 
-$ perl script/ephemeris.pl
+$ perl script/planpos.pl
 
 For list of available options. type:
 
-$ perl script/ephemeris.pl -h
+$ perl script/planpos.pl --help
 
 
 LICENSE AND COPYRIGHT
